[package]
name = "chessable"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess = "3.2.0"
raster = "0.2.0"
regex = "1.10.2"
serenity = "0.11.7"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
